[gd_scene load_steps=2 format=3 uid="uid://b8x7y2w4u1p0"]

[ext_resource type="Script" path="res://scripts/ui/fleet_slot_widget.gd" id="1_slot"]

[node name="FleetSlotWidget" type="PanelContainer"]
custom_minimum_size = Vector2(280, 180)
offset_right = 280.0
offset_bottom = 180.0
script = ExtResource("1_slot")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "IDLE"
horizontal_alignment = 2

[node name="MissionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Alpha Sector Scavenging"

[node name="ShipLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ship: Corvette"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
show_percentage = false

[node name="EarningsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
text = "Yielded: Ti: 0, Fe: 0"
autowrap_mode = 3

[node name="ActionBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DeployBtn" type="Button" parent="MarginContainer/VBoxContainer/ActionBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Deploy Fleet"

[node name="RecallBtn" type="Button" parent="MarginContainer/VBoxContainer/ActionBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Recall Fleet"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ActionBox/DeployBtn" to="." method="_on_deploy_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ActionBox/RecallBtn" to="." method="_on_recall_btn_pressed"]
